# ai-procurement-billing-suite

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
assets/: architecture.json
scripts/: generate_arch_diagram.py
src/procurement_suite/: __init__.py  config.py  models.py  orchestrator.py
src/procurement_suite/api/: __init__.py  app.py
src/procurement_suite/connectors/: __init__.py  base.py  email.py  erp.py  price_lookup.py  whatsapp.py
src/procurement_suite/llm/: __init__.py  client.py  negotiator.py  quote_extractor.py  requirement_parser.py
src/procurement_suite/pipeline/: __init__.py  billing.py  comparison.py  matching.py  procurement.py  quotation.py  rfq.py
src/procurement_suite/services/: __init__.py  markup.py  vendor_rating.py
tests/: conftest.py  test_comparison.py  test_markup.py  test_matching.py
