[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procurement-suite"
version = "0.1.0"
description = "AI-driven procurement & billing automation: capture enquiry, source vendor quotes, identify L1, quote the customer, raise POs, 3-way match, and invoice — wired to your ERP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Arpit Singh" }]
keywords = ["procurement", "billing", "rfq", "erp", "llm", "anthropic", "automation"]

dependencies = [
    "anthropic>=0.69",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[project.scripts]
procurement-suite = "procurement_suite.api.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
